<resources>
    <string name="app_name">RipeAi</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="copyright">© 2022 Ripe.ai</string>
    <string name="min_length_char">Minimal Length %1$d characters</string>
    <string name="email_hint">Text your email</string>
    <string name="pass_hint">Text your password</string>
    <string name="login_ket">Don\'t have any account ?</string>
    <string name="image_login">image login</string>
    <string name="invalid_email">Format email is invalid!</string>
    <string name="name">Name</string>
    <string name="name_hint">Text your name</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_photo">Add Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="hint_desc">Description</string>
    <string name="check">Check the result</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="input_image">Input Image</string>
    <string name="pick">Choose</string>
    <string name="login_error">Wrong email or password</string>
    <string name="signup_error">Error</string>
    <string name="signup_ket">Signup Description</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">Enter Your Phone</string>
    <string name="copy">\@2022 Ripe.ai</string>
    <string name="about_detail">Ripe.ai is Application to detect level of ripeness of fruit and assess the level feasibility for consumption. </string>
    <string name="img_fruit">image for fruit</string>
    <string name="fruit_name">Name of Fruit</string>
    <string name="description">description</string>
    <string name="banana">Banana</string>
    <string name="banana_description">A banana is an elongated, edible fruit</string>
    <string name="name_profile">"Name : "</string>
    <string name="phone_profile">"Phone : "</string>
    <string name="email_profile">Email :</string>
    <string name="apple">Apple</string>
    <string name="apple_description">An apple is an edible fruit produced by an apple tree (Malus domestica). Apple trees are cultivated worldwide and are the most widely grown species in the genus Malus</string>
</resources>