<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/button_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/button_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history"
        app:showAsAction="always" />
    <item
        android:id="@+id/button_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/button_about"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"
        app:showAsAction="always" />

</menu>