<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

    <Button
        android:id="@+id/button_cam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <TextView
        android:id="@+id/tv_fruitName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/fruit_name"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@id/button_gallery" />
    <TextView
        android:id="@+id/tv_prediction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_desc"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toBottomOf="@id/tv_fruitName" />


    <Button
        android:id="@+id/button_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="@+id/image_view" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>